@@ -1,6 +1,5 @@
 package datawave.query.attributes;
 
-import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -9,28 +8,28 @@ import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 
+import javax.annotation.Nullable;
+
+import org.apache.accumulo.core.data.ByteSequence;
+import org.apache.accumulo.core.data.Key;
+import org.apache.log4j.Logger;
+
 import com.google.common.base.Function;
+import com.google.common.cache.CacheBuilder;
+import com.google.common.cache.CacheLoader;
+import com.google.common.cache.LoadingCache;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
+
 import datawave.data.type.LcNoDiacriticsType;
 import datawave.data.type.NoOpType;
 import datawave.data.type.Type;
 import datawave.query.util.TypeMetadata;
 
-import org.apache.accumulo.core.data.Key;
-import org.apache.hadoop.io.Text;
-import org.apache.log4j.Logger;
-
-import com.google.common.cache.CacheBuilder;
-import com.google.common.cache.CacheLoader;
-import com.google.common.cache.LoadingCache;
-import com.google.common.collect.Sets;
-
-import javax.annotation.Nullable;
-
 public class AttributeFactory {
     private static final Logger log = Logger.getLogger(AttributeFactory.class);
-    
+
     protected static final LoadingCache<String,Class<?>> clazzCache = CacheBuilder.newBuilder().maximumSize(128).expireAfterAccess(1, TimeUnit.HOURS)
                     .build(new CacheLoader<String,Class<?>>() {
                         @Override
@@ -38,55 +37,53 @@ public class AttributeFactory {
                             return Class.forName(clazz);
                         }
                     });
-    
+
     private final TypeMetadata typeMetadata;
-    
+
     private String defaultType = NoOpType.class.getName();
     private Class<?> mostGeneralType = LcNoDiacriticsType.class;
     private static final List<Class<?>> mostGeneralTypes = Collections
                     .unmodifiableList(Lists.<Class<?>> newArrayList(NoOpType.class, LcNoDiacriticsType.class));
-    
+
     public AttributeFactory(TypeMetadata typeMetadata) {
         this.typeMetadata = typeMetadata;
     }
-    
+
     public AttributeFactory(TypeMetadata typeMetadata, String defaultType) {
         this(typeMetadata);
         this.defaultType = defaultType;
     }
-    
+
     private String extractIngestDataTypeFromKey(Key key) {
-        Text cf = new Text();
-        key.getColumnFamily(cf);
-        ByteBuffer b = ByteBuffer.wrap(cf.getBytes(), 0, cf.getLength());
-        int endPos = 0;
-        while (b.hasRemaining()) {
-            if (b.get() == 0)
+        ByteSequence bytes = key.getColumnFamilyData();
+        int index = 0;
+        for (int i = 0; i < bytes.length(); i++) {
+            if (bytes.byteAt(i) == 0x00) {
+                index = i;
                 break;
-            endPos++;
+            }
         }
-        cf.set(cf.getBytes(), 0, endPos);
-        return cf.toString();
+        return bytes.subSequence(0, index).toString();
     }
-    
+
     public Attribute<?> create(String fieldName, String data, Key key, boolean toKeep) {
-        
+
         return this.create(fieldName, data, key, extractIngestDataTypeFromKey(key), toKeep, false);
     }
-    
+
     public Attribute<?> create(String fieldName, String data, Key key, boolean toKeep, boolean isComposite) {
-        
+
         return this.create(fieldName, data, key, extractIngestDataTypeFromKey(key), toKeep, isComposite);
     }
-    
+
     public Attribute<?> create(String fieldName, String data, Key key, String ingestType, boolean toKeep) {
         return this.create(fieldName, data, key, ingestType, toKeep, false);
     }
-    
+
     public Attribute<?> create(String fieldName, String data, Key key, String ingestType, boolean toKeep, boolean isComposite) {
-        
+
         Collection<String> dataTypes = (isComposite) ? Arrays.asList(NoOpType.class.getName()) : this.typeMetadata.getTypeMetadata(fieldName, ingestType);
-        
+
         try {
             if (null == dataTypes || dataTypes.isEmpty()) {
                 Class<?> dataTypeClass = clazzCache.get(this.defaultType);
@@ -96,7 +93,7 @@ public class AttributeFactory {
                 Class<?> dataTypeClass = clazzCache.get(dataType);
                 return getAttribute(dataTypeClass, fieldName, data, key, toKeep);
             } else {
-                
+
                 Iterable<Class<?>> typeClasses = Iterables.transform(dataTypes, new Function<String,Class<?>>() {
                     @Nullable
                     @Override
@@ -108,11 +105,11 @@ public class AttributeFactory {
                         }
                     }
                 });
-                
+
                 Collection<Class<?>> keepers = AttributeFactory.getKeepers(typeClasses);
-                
+
                 HashSet<Attribute<? extends Comparable<?>>> attrSet = Sets.newHashSet();
-                
+
                 for (String dataType : dataTypes) {
                     Class<?> dataTypeClass = clazzCache.get(dataType);
                     Attribute<?> attribute = getAttribute(dataTypeClass, fieldName, data, key, toKeep);
@@ -123,7 +120,7 @@ public class AttributeFactory {
                     }
                     attrSet.add(attribute);
                 }
-                
+
                 return new Attributes(attrSet, toKeep);
             }
         } catch (Exception ex) {
@@ -131,14 +128,14 @@ public class AttributeFactory {
             throw new RuntimeException("Could not create Attribute for " + fieldName + " and " + data, ex);
         }
     }
-    
+
     protected Attribute<?> getAttribute(Class<?> dataTypeClass, String fieldName, String data, Key key, boolean toKeep) throws Exception {
-        Type<?> type = (Type<?>) dataTypeClass.newInstance();
+        Type<?> type = (Type<?>) dataTypeClass.getDeclaredConstructor().newInstance();
         try {
             type.setDelegateFromString(data);
             return new TypeAttribute(type, key, toKeep);
         } catch (Exception ex) {
-            
+
             if (ex instanceof IllegalArgumentException) {
                 log.warn("Could not parse " + fieldName + " = '" + data + "', resorting to a NoOpType");
                 return new TypeAttribute(new NoOpType(data), key, toKeep);
@@ -146,10 +143,10 @@ public class AttributeFactory {
                 log.error("Could not create Attribute for " + fieldName + " and " + data, ex);
                 throw new IllegalArgumentException("Could not create Attribute for " + fieldName + " and " + data, ex);
             }
-            
+
         }
     }
-    
+
     public static Collection<Class<?>> getKeepers(Iterable<Class<?>> finders) {
         Collection<Class<?>> keepers = Sets.newHashSet(finders);
         List<Class<?>> losers = AttributeFactory.mostGeneralTypes;
@@ -157,7 +154,7 @@ public class AttributeFactory {
             // do not remove anything
             return keepers;
         }
-        
+
         // created and populated only for trace debug
         Collection<Class<?>> weepers = null;
         if (log.isTraceEnabled()) {
@@ -183,5 +180,5 @@ public class AttributeFactory {
         }
         return keepers;
     }
-    
+
 }
